# convergio-build

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-build/: Cargo.toml
crates/convergio-build/src/: builder.rs  builder_tests.rs  deployer.rs  ext.rs  lib.rs  mcp_defs.rs  routes.rs  schema.rs  types.rs
crates/convergio-build/tests/: e2e.rs  e2e_routes.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md
