[workspace]
resolver = "2"
members = ["crates/convergio-build"]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-build"

[workspace.dependencies]
convergio-types = "0.1"
convergio-db = "0.1"
convergio-telemetry = "0.1"

thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
